Removed fix for unscrollable Contributors Page on mobile. To be addressed in a separate PR which handles the global application height on mobile.

--- a/src/styles/_application.scss
+++ b/src/styles/_application.scss
@@ -21,5 +21,4 @@ html {
   height: 100%;
   display: flex;
   flex: 1 1 100%;
-  overflow: auto;
 }
